# Quirky

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
bench/core/: bench_board_manipulation.cpp  bench_mock_search.cpp  bench_movegen.cpp  test_boards.h
src/: main.cpp
src/api/: api.cpp  api.h
src/api/uci/: interactor.cpp  interactor.h  logger.cpp  logger.h  parser.cpp  parser.h  protocol.cpp  protocol.h  uci_protocol.cpp  uci_protocol.h
src/api/xboard/: protocol.cpp  protocol.h  xboard_protocol.cpp  xboard_protocol.h
src/core/: util.h
src/core/board/: board.cpp  board.h  geometry.cpp  geometry.h  hash.h  types.h  util.h
src/core/moves/: attack.cpp  attack.h  board_manipulation.cpp  board_manipulation.h  magic.cpp  magic.h  magic_calc.cpp  magic_calc.h  move.cpp  move.h  movegen.cpp  movegen.h
src/eval/: eval_features.cpp  eval_features.h  evaluator.cpp  evaluator.h  feature.h  layers.h  model.cpp  model.h  pawns.cpp  pawns.h  psq.h  score.h
src/incbin/: embed.py  model.qnne
src/search/: util.h
src/search/control/: control.cpp  control.h  stat.cpp  stat.h  time.cpp  time.h
src/search/position/: move_picker.cpp  move_picker.h  position.cpp  position.h  repetition_table.cpp  repetition_table.h  transposition_table.cpp  transposition_table.h
src/search/searcher/: launcher.cpp  launcher.h  logger.cpp  logger.h  searcher.cpp  searcher.h
src/types/: types.h  types_operations.h
src/util/: arena.h  bit.h  channel.h  error.h  geometry.h  hash.h  heaparray.h  io.h  macro.h  math.h  processor.h  random.h  string.h
test/core/: board_manipulation_test.cpp  fen_parse_test.cpp  simple_movegen_test.cpp  util.cpp  util.h
test/core/board/: fen_parse_test.cpp
test/core/moves/: board_manipulation_test.cpp  pseudolegal_board_manipulation_test.cpp  pseudolegal_movegen_test.cpp  simple_movegen_test.cpp  util.cpp  util.h
test/eval/: evaluator_test.cpp
tools/data_sampler/: config.json  fengen.go  filter.go  go.mod  go.sum  label.go  main.go  settings.go
tools/eval/learner/: learner.ipynb
tools/eval/model/learner/: learner.ipynb
tools/eval/model/sampler/: calcer.cpp  calcer.h  filter.cpp  filter.h  main.cpp  reader.cpp  reader.h  weighter.cpp  weighter.h  writer.cpp  writer.h
tools/eval/sampler/: calcer.cpp  calcer.h  main.cpp  reader.cpp  reader.h  weighter.h  writer.h
tools/eval/tuner/: calcer.cpp  calcer.h  dataset.cpp  dataset.h  learner.cpp  learner.h  main.cpp  reader.cpp  reader.h
tools/eval/tuner/parser/: reader.h
tools/model_learner/: conf.json  learner.ipynb  model.qnne
tools/model_sampler/: main.cpp  reader.cpp  reader.h  writer.cpp  writer.h
